# poetry2container

./: .cirrus.yml  Dockerfile  README.md  poetry2container  test.sh
testproj/: pyproject.toml
