[tool.poetry]
name = "foo"
version = "0.1.0"
description = "A test project for poetry2container"
authors = ["Jamie Bliss <jamie@ivyleav.es>"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
click = "^7.0"

[tool.poetry.scripts]
foo = 'foo:hello'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
